[EEX-928] fix filter-button view on mobile

--- a/src/public/scss/components/_table-label.scss
+++ b/src/public/scss/components/_table-label.scss
@@ -16,6 +16,9 @@
 	@include max-vw(1000) {
 		margin-right: 20px;
 	}
+	@include max-vw($res-500) {
+		align-items: flex-end;
+	}
 }
 
 .table-label {
@@ -35,6 +38,7 @@
 		padding: 0 0 0 20px;
 	}
 	@include max-vw($res-500) {
+		line-height: 30px;
 		padding: 0 0 0 15px;
 	}
 }
